construct model_trainer

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ share/python-wheels/
 # add folder
 artifacts/
 log_file/
+catboost_info/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
